[tool.poetry]
name = "python-version-features"
version = "0.1.0"
description = ""
authors = ["laj <larry.jones@reveal-energy.com>"]
readme = "README.md"
packages = [{include = "python_version_features"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.5.1"
jupyterlab-vim = "^0.15.1"
tzdata = "^2022.7"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
